// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docs/rules/empty-heading.md inline validation: correct 1`] = `[]`;

exports[`docs/rules/empty-heading.md inline validation: img-alt 1`] = `[]`;

exports[`docs/rules/empty-heading.md inline validation: incorrect 1`] = `
[
  {
    "errorCount": 2,
    "filePath": "inline",
    "messages": [
      {
        "column": 2,
        "line": 1,
        "message": "<h1> cannot be empty, must have text content",
        "offset": 1,
        "ruleId": "empty-heading",
        "ruleUrl": "https://html-validate.org/rules/empty-heading.html",
        "selector": "h1",
        "severity": 2,
        "size": 2,
      },
      {
        "column": 2,
        "line": 2,
        "message": "<h2> cannot be empty, must have text content",
        "offset": 11,
        "ruleId": "empty-heading",
        "ruleUrl": "https://html-validate.org/rules/empty-heading.html",
        "selector": "h2",
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<h1></h1>
<h2><span></span></h2>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/empty-heading.md inline validation: whitespace 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 2,
        "line": 1,
        "message": "<h1> cannot be empty, must have text content",
        "offset": 1,
        "ruleId": "empty-heading",
        "ruleUrl": "https://html-validate.org/rules/empty-heading.html",
        "selector": "h1",
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<h1> </h1>",
    "warningCount": 0,
  },
]
`;
